<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/navigation_graph"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/chat"
            android:drawablePadding="8dp"
            android:layout_marginStart="23dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/camera"
            android:drawablePadding="8dp"
            android:layout_marginStart="36dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home"
            android:background="@drawable/bg"
            android:src="@drawable/mdi_translate"
            android:paddingHorizontal="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/history"
            android:drawablePadding="8dp"
            android:layout_marginStart="27dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorite"
            android:text="@string/favourite"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/fav"
            android:drawablePadding="8dp"
            android:layout_marginStart="27dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>