<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CameraFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/top"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggle"
            android:background="@drawable/back"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_translation"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="22dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lang"
        android:background="@drawable/lang_back"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lang"
        app:layout_constraintLeft_toLeftOf="@id/lang"
        app:layout_constraintBottom_toBottomOf="@id/lang"
        android:text="@string/english"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/america"
        android:drawablePadding="10dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lang"
        app:layout_constraintRight_toRightOf="@id/lang"
        app:layout_constraintBottom_toBottomOf="@id/lang"
        android:text="@string/spanish"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/spain"
        android:drawablePadding="10dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/swap"
        app:layout_constraintTop_toTopOf="@id/lang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/lang"/>

    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/preview"
        app:layout_constraintTop_toBottomOf="@id/lang"
        app:layout_constraintBottom_toTopOf="@id/shoot"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/image"
        app:layout_constraintTop_toBottomOf="@id/lang"
        app:layout_constraintBottom_toTopOf="@id/shoot"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_translate"
        android:background="@drawable/send_translate"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery"
        android:background="@drawable/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="81dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flash"
        android:background="@drawable/flash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="85dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoot"
        android:background="@drawable/shoot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>